# UniversalMediaDL

./: .gitignore  Dockerfile  Procfile  README.md  docker-entrypoint.sh  downloader.html  index.html  instagram.html  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  server.py  tiktok.html  universal.html
LunarMetube/: .env.example
app/: main.py  subscriptions.py  ytdl.py
css/: main.css
js/: app.js  downloader.js  instagram.js  tiktok.js  ui.js  universal.js
static/: downloader.html  index.html  instagram.html  tiktok.html  universal.html
static/css/: animations.css
static/js/: app.js  downloader.js  instagram.js  tiktok.js  universal.js
ui/: downloader.html  index.html
ui/css/: main.css
ui/js/: app.js  stars.js  ui.js
